--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -253,10 +253,10 @@
 
             <b>20 сентября 2012</b>
             <li>
-            (опция) Добавил juick advanced прокси для картинок (еще один сервер). Этот прокси имеет неоспоримое преимущество
+            (опция) Добавил juick advanced прокси для картинок (еще один прокси сервер). Этот сервер имеет неоспоримое преимущество
             перед другими проксями: он мониторит ленту жуйка и закачивает в себя картинки сразу, как только автор
             запостил пост, и стало быть еще до того, как юзер картинку попросит. И стало быть, отдает ее очень сразу.
-            Пережимает он без вопросов как надо, graphiсsmagick jpeg quality 35.
+            Пережимает он без вопросов как надо, graphiсsmagick jpeg quality 35. Опцию надо явно включить.
             <br>
             Вдобавок, добавил еще немного источников картинок.
             </li>
@@ -264,7 +264,12 @@
             (опция) Добавил JuBo RSS, то есть можно посмотреть ленту от JuBo. Делается это так. У бота
             спрашивается автоматически адрес вашей ленты, если у вас настроен Jabber в Juick Advanced. Если
             не настроен - вводите руками. Количество комментов на каждый пост, который вернул JuBo, увы,
-            [пока?] не показывается.
+            [пока?] не показывается. Опцию надо явно включить.
+            </li>
+            <li>
+            (опция) Добавил возможность уменьшить фотографию, снятую на камеру. Будет спрошен желаемый размер
+            из списка, после выбора покажется уже точный уменьшенный размер и размер файла. Он и приаттачится.
+            Опцию надо явно включить.
             </li>
             <hr>
             Все фичи Juick Advanced можно посмотреть в настройках, если нажать там кнопку Меню.
@@ -579,6 +584,7 @@
     <string name="TryOther">Try other..</string>
     <string name="AskForPhotoResize">Ask for photo resize</string>
     <string name="OnlyWorksWithAboveCheckboxOn">Only works with above checkbox on</string>
+    <string name="OlderFeatures">Older features..</string>
 
 
 </resources>
