+ filtering of all messages; filtering of incoming xmpp messages; all with juick/jubo rules   persistent rules; option "get rules and disconnect"; Jubo "juick" fix;

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -290,6 +290,14 @@
     <string name="OnlyWorksWithAboveCheckboxOn">Работает только с включенной предыдущей опцией</string>
     <string name="OlderFeatures">Предыдущие...</string>
     <string name="EndOfMessages">Конец мессаг</string>
+    <string name="OnlyUseToDownloadBL">Только для BL</string>
+    <string name="DisconnectAsSoonAsBLDownloaded">Скачать black list и отключиться</string>
+    <string name="JuBoIntegration">Использование JuBo</string>
+    <string name="JuBoRSSReader">JuBo RSS читалка</string>
+    <string name="AddThisSourceToTheList">Добавить этот источник в список</string>
+    <string name="FixJuboJuickKeyword">Фикс JuBo \'juick\' слова</string>
+    <string name="ExcludeJuickImageMessages">Если есть подписка на слово juick, исключать посты с картинками, на которые JuBo реагирует, потому что там слово juick есть в их URL.
+    </string>
 
 
 </resources>
