+ delete message/comment

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -49,12 +49,14 @@
     <!-- JuickMessageMenu -->
     <string name="Recommend_message">Рекомендовать сообщение</string>
     <string name="Subscribe_to">Подписаться на</string>
+    <string name="DeleteMessage">Удалить</string>
     <string name="Unsubscribe_from">Отписаться от</string>
     <string name="Blacklist">Добавить в черный список</string>
     <string name="FilterOutUser">Не показывать</string>
     <string name="Filters">Фильтры юзеров</string>
     <string name="Recommended">Рекомендовано</string>
     <string name="Subscribed">Подписано</string>
+    <string name="Deleted">Удалено (наверное)</string>
     <string name="Unsubscribed">Отписано</string>
     <string name="Added_to_BL">Добавлено в черный список</string>
     <string name="Are_you_sure_recommend">Вы уверены, что хотите рекомендовать?</string>
@@ -125,6 +127,8 @@
     <string name="In_reply_to_">В ответ на:</string>
     <string name="Message_List">Список сообщений</string>
     <string name="ReallyFilterOut">В самом деле скрыть пользователя?</string>
+    <string name="ReallySubscribe">В самом деле подписаться?</string>
+    <string name="ReallyDelete">В самом деле удалить?</string>
     <string name="ResumingFromLastTime"><![CDATA[<< закончили читать здесь в прошлый раз >>]]></string>
     <string name="UnreadPeriodStart"><![CDATA[<< начало нечитанных сообщений >>]]></string>
     <string name="Your_User_Name">Ваш жуйский ник</string>
