--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -602,6 +602,12 @@
     <string name="ExcludeJuickImageMessages">Exclude messages with image attachment and subscribed juick keyword appearing only in image URL</string>
     <string name="AllMessages">All messages</string>
     <string name="EditList">Edit list</string>
+    <string name="LoginPasswordExplanation">
+        You must use login and password obtained on juick.com site, NOT the jabber/xmpp password.
+
+        If you don\'t know your password: use your jabber client and send LOGIN command to the juick bot. Open link received.
+        Set up your password here: http://juick.com/settings?page=password
+    </string>
 
 
 </resources>
