--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="Create">Create</string>
     <string name="Send">Send</string>
     <string name="Settings">Settings</string>
-    <string name="Filters">User filter</string>
+    <string name="Filters">Local user filter...</string>
     <string name="Signout">Signout</string>
     <string name="Error">Error</string>
     <string name="blog">blog</string>
@@ -148,7 +148,7 @@
     <string name="Such_as_blacklist_recommend">...such as blacklist, recommend etc</string>
     <string name="TranslateToRussian">Translate to Russian</string>
     <string name="Incoming_Events">Incoming events</string>
-    <string name="XMPPControl">XMPP control</string>
+    <string name="XMPPControl">XMPP control...</string>
     <string name="Compressed_Menu_Summary">More items in message menu will fit on the screen</string>
     <string name="Your_User_Name">Your Juick Username</string>
     <string name="Your_User_Name_Explain">Juick API does not provide means to know your Nickname. Please enter the
@@ -169,7 +169,8 @@
     <string name="navigationSaved">Saved messages</string>
     <string name="SingleLine_Menu">Single line menu items</string>
     <string name="SingleLine_Menu_Summary">Menu will be even more compact</string>
-    <string name="XMPP_client">XMPP client</string>
+    <string name="XMPP_client">XMPP (Jabber) client</string>
+    <string name="XMPP_client2">Enable to receive official Juick notifications</string>
     <string name="XMPP_config">XMPP config</string>
     <string name="XMPP_enabled">XMPP enabled</string>
     <string name="Not_set_up">Not set up</string>
@@ -181,14 +182,14 @@
     <string name="VibrationEnabled">Vibration enabled</string>
     <string name="LEDEnabled">LED enabled</string>
     <string name="VibrationInCurrentThread">Vibration in current thread</string>
-    <string name="LoadImages">Load images</string>
+    <string name="LoadImages">Load attached images</string>
     <string name="OnOffProxy">off / full / proxy ?</string>
     <string name="LoadImageMode">Load image mode</string>
-    <string name="ImageProxyLogin">Image Proxy login</string>
-    <string name="ImageProxyPassword">Image Proxy password</string>
+    <string name="ImageProxyLogin">Fastun.com login</string>
+    <string name="ImageProxyPassword">Fastun.com password</string>
     <string name="DaysToKeepCachedImages">Days to keep cached images</string>
     <string name="ImageHeight">Image height (% of screen)</string>
-    <string name="MarkAlreadyReadImages">Mark already read messages</string>
+    <string name="MarkAlreadyReadMessages">Mark already read messages</string>
     <string name="EnableLocalStorage">Enable local storage</string>
     <string name="ForBetterLife">..for better life</string>
     <string name="DaysToKeepStoredMessages">Days to keep stored messages</string>
@@ -197,9 +198,9 @@
     <string name="LeaveItEmptyIfUnknown">Leave it empty if unknown</string>
     <string name="PrefetchMoreMessages">Prefetch more messages</string>
     <string name="AndNeverSeeLoading">...and never see `loading..`</string>
-    <string name="PreviewRepliesBeforeSend">Preview your replies before send</string>
-    <string name="WarnRepliesWithoutReplyTo">Warn replies without \'In-reply-to\'?</string>
-    <string name="CapitalizeReplyText">Auto-capitalize reply text</string>
+    <string name="PreviewRepliesBeforeSend">Preview composed replies</string>
+    <string name="WarnRepliesWithoutReplyTo">Warn replies to /0</string>
+    <string name="CapitalizeReplyText">Auto-capitalize text</string>
     <string name="AccuracyOfLocation">Accuracy of location</string>
     <string name="WhenReplying">..when replying</string>
     <string name="CameraCapture">Camera capture</string>
@@ -221,8 +222,8 @@
     <string name="SetupXMPP">Setup XMPP...</string>
     <string name="Presets_">Presets:</string>
     <string name="Test__">Test..</string>
-    <string name="RightPartOf_">part after @</string>
-    <string name="LeftPartOf_">part before @</string>
+    <string name="RightPartOf_">\@ part after </string>
+    <string name="LeftPartOf_">username@jabber.ru</string>
     <string name="Priority_">Priority:</string>
     <string name="ReadThis">Read this..</string>
     <string name="XMPPReadme"><![CDATA[
@@ -534,8 +535,6 @@
     ]]>
     </string>
 
-    <string name="WhatsNew">What\'s new</string>
-    <string name="Privacy_Policy">Privacy Policy</string>
     <string name="EnableUsageStatistics">Enable anonymous usage statistics?</string>
     <string name="UsageStatistics">Usage statistics</string>
 
@@ -607,6 +606,27 @@
 
         If you don\'t know your password: use your jabber client and send LOGIN command to the juick bot. Open link received.
         Set up your password here: http://juick.com/settings?page=password
+    </string>
+    <string name="UI_Settings">UI</string>
+    <string name="UsabilityEnhancements">Look and feel, notifications, font size etc</string>
+    <string name="Behavior">Behavior</string>
+    <string name="Behavior2">Confirmations, markers and other helpful stuff</string>
+    <string name="ContentSettings">Content</string>
+    <string name="ContentSettings2">Images, message numbers, filters etc</string>
+    <string name="Sources">Sources</string>
+    <string name="Sources2">JuBo, jugregator.org etc</string>
+    <string name="NetworkingAndStorage">Network and storage</string>
+    <string name="NetworkingAndStorage2">Proxies, compression, cache, database, GPS</string>
+    <string name="WhatsNew">What\'s new...</string>
+    <string name="WhatsNew2">See changelist</string>
+    <string name="Privacy_Policy">Privacy Policy...</string>
+    <string name="Privacy_Policy2">See where your data goes to</string>
+    <string name="OnlyNeededIfUsing">Only needed is using this proxy</string>
+    <string name="XMPPLoginInfo">XMPP account...</string>
+    <string name="JuBoFilters">View JuBo/Juick stop lists...</string>
+    <string name="StopListsEmpty">Stop-lists are empty. If you set up XMPP/Jabber, they will be filled and working.
+        By the way, there\'s an option \'download blacklists and disconnect\' for those who does not like to use XMPP
+        in Juick Advanced on regular basis.
     </string>
 
 
