--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -257,7 +257,7 @@
     <string name="ReadPrivacyPolicy">Подробнее...</string>
     <string name="ChooseFirstOption">Если вы без понятия о чем речь, выбирайте первую опцию.</string>
     <string name="IndirectImages">Грузить непрямые ссылки</string>
-    <string name="Gelbooru">..с некоторых сайтов (например gelbooru.com). Кушает лишний траффик, размером с HTML страницу. </string>
+    <string name="Gelbooru">..с некоторых сайтов (например gelbooru.com). Если без JA proxy, то кушает лишний траффик, размером с HTML страницу. </string>
     <string name="UseBackupServer">Пользовать запасной сервер</string>
     <string name="Usage_Report">Анон. стат.</string>
     <string name="EnableHttpCompression">Сжатие HTTP трафика</string>
@@ -337,6 +337,11 @@
         постоянно, существует опция \'скачать блеклисты и отключиться\'
     </string>
     <string name="ClickToReply">Ответить</string>
+    <string name="OtherImages">Картинки из прочих урлов</string>
+    <string name="OtherImages2">..помимо картинок с juick.com</string>
+    <string name="Message_numbers_will_be_shown">..будут показаны, а также номера комментариев</string>
+    <string name="EditingJuboFilters">Изменение фильтров JuBo/Juick</string>
+    <string name="YouCannotChangeJuboHere">Изменяйте через жаббер клиент стандартным способом.</string>
 
 
 </resources>
