+ completed new tags screen * fixed images in thread view not recycling

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -348,6 +348,7 @@
     <string name="JuickUsersPerMonth">Количество жуйко-юзеров</string>
     <string name="JuickUsersPerMonth2">Пишущих, комментящих, регистрирующихся</string>
     <string name="ClickToSelectURL">Нажмите для выбора URL</string>
+    <string name="TagsFormatError">Теги должны начинаться со звездочки</string>
 
 
 </resources>
