--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -166,6 +166,7 @@
     <string name="navigationPhoto">With photos</string>
     <string name="navigationMy">My blog</string>
     <string name="navigationSrachiki">Srachiki (jugregator)</string>
+    <string name="navigationPrivate">Pvt (web)</string>
     <string name="navigationUnread">All-unread</string>
     <string name="navigationSaved">Saved messages</string>
     <string name="SingleLine_Menu">Single line menu items</string>
@@ -645,6 +646,7 @@
     <string name="JuickUsersPerMonth2">Posting, commenting, new</string>
     <string name="ClickToSelectURL">Click to select URL</string>
     <string name="TagsFormatError">Tags format error (must start with \'*\')</string>
+    <string name="InvalidLoginPassword">Invalid login/password</string>
 
 
 </resources>
