added whatsnew text

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -165,7 +165,7 @@
     <string name="navigationTop">Top messages</string>
     <string name="navigationPhoto">With photos</string>
     <string name="navigationMy">My blog</string>
-    <string name="navigationSrachiki">Srachiki (jugregator)</string>
+    <string name="navigationSrachiki">Srachiki (jugr)</string>
     <string name="navigationPrivate">Private(web)</string>
     <string name="navigationDiscuss">Discuss.(web)</string>
     <string name="navigationUnread">All-unread</string>
@@ -256,6 +256,94 @@
     </string>
 
     <string name="NewFeatures">New features</string>
+
+    <string name="rf_2012111001"><![CDATA[
+            <html>
+            <head>
+            <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+            </head>
+            <body>
+
+            <b>11 ноября 2012</b>
+            <li>
+            Приватные сообщения. Парсятся с сайта. Спросит логин и пароль (1 раз). Дискуссии (тоже раздел с сайта). Всё надо включить в настройках.
+            </li>
+            <li>
+            Также, лента подписок может браться не глючная с json api, а с сайта. Если на сайте нет глюка с датами, то значит нет глюка и в Juick Advanced. Надо включить в настройках.
+            </li>
+            <li>
+            Кеширование тредов. Если тред уже был посещен, и в настройках стоит галочка "сохранять мессаги локально", то второй раз тред будет
+            открываться моментально, пока грузится обновленная версия. Индикация этого состояния.
+            </li>
+            <li>
+            Кеширование списка тегов, переработанная страница тегов: во время создания сообщения можно выбирать несколько тегов.
+            </li>
+            <li>
+            Создана инфраструктура графиков, и добавлено несколько графиков: активность сайта целиком, активность конкретного пользователя.
+            Дальше будет больше.
+            </li>
+            <li>
+            Переработано меню, появляющееся при нажатии на сообщение. Не нужно скроллить, всё на своих местах, больше команд. Можно включить в настройках, потому что это опция.
+            </li>
+            <li>
+            Добавлен глобальный и локальный search provider, кнопка поиск работает и ищет глобально по сайту.
+            </li>
+            <li>
+            Отправление фотографий: пофикшен баг с ориентацией фотографии во время изменения размера. Теперь поворачивается правильно.
+            Также можно изменять размер фотографий, отправляемых из галереи или другого места.
+            </li>
+            <li>
+            Окно комментария передизайнено, с целью сделать более широким ввод текста.
+            </li>
+            <li>
+            Окно настроек теперь с категориями.
+            </li>
+            <li>
+            Правильно показываются наклонный, жирный стили и подчеркивание в тексте мессагах. Выделять жирным итд в написуемых мессагах, понятно, надо как и раньше.
+            </li>
+            <li>
+            Еще больше оптимизирован рендеринг и плавность, т.к. больше процессинга вынесено из UI thread.
+            Пофикшены гигантские меморилики связанные с WebView/картинками,
+            и добавлена строка с размером заюзанной кучи в окошко с XMPP Info.
+            </li>
+            <li>
+            Зависимость на google maps сделана опциональной, для некоторых голых прошивок.
+            </li>
+            <li>
+            Окно настроек Jabber немного переработано и упрощено. Ya.ru добавлен в шаблоны подключения Jabber.
+            </li>
+            <li>
+            Объяснение в окошке логина о том, как получить на сайте login/password.
+            </li>
+            <li>
+            Jabber сообщения: расширено меню. Клик на сообщение двумя пальцами раскроет его прямо на месте, не обрезая.
+            </li>
+            <li>
+            Подсветка собственного ника среди комментариев и в Jabber сообщениях, для быстрого определения ответов именно вам.
+            </li>
+            <li>
+            Переход к основному списку мессаг, если вдруг Juick Advanced открыт по прямой ссылке на мессаг (из jabber клиента, например).
+            Появляется кнопка \"Все сообщения\", которая открывает окно по умолчанию. Если GC собрал главное окно, она тоже появляется.
+            </li>
+            <li>
+            Более правильное позиционирование всплывающей подсказки с цепочкой ответов во перед написанием коммента.
+            </li>
+            <li>
+            Команда удаления своего сообщения или коммента.
+            </li>
+            <li>
+            Загрузка блеклиста из JuBo и Juick (загружается через Jabber).
+            Для тех, кто не хочет постоянно иметь Jabber включенным, появилась опция: включить Jabber только для того, чтобы скачать блеклисты, затем отсоединиться.
+            Затем этим блеклистом фильтруются все сообщения! Можно посмотреть закачанные BL списки в настройках.
+            </li>
+            <li>
+            Автоматическое определение uid для "Мой блог" и подобных
+            </li>
+            <hr>
+            Все фичи Juick Advanced можно посмотреть в настройках, если нажать там кнопку Меню.
+            ]]>
+    </string>
+
 
     <string name="rf_2012092001"><![CDATA[
             <html>
